[package]
name = "bevy_oddio"
version = "0.1.0"
authors = ["TheRawMeatball <therawmeatball@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = { path = "../../bevy/crates/bevy_app", version = "0.4.0" }
bevy_asset = { path = "../../bevy/crates/bevy_asset", version = "0.4.0" }
bevy_ecs = { path = "../../bevy/crates/bevy_ecs", version = "0.4.0" }
bevy_reflect = { path = "../../bevy/crates/bevy_reflect", version = "0.4.0", features = ["bevy"] }
bevy_utils = { path = "../../bevy/crates/bevy_utils", version = "0.4.0" }
bevy_transform = { path = "../../bevy/crates/bevy_transform", version = "0.4.0" }
bevy_math = { path = "../../bevy/crates/bevy_math", version = "0.4.0" }

oddio = "0.2.0"
cpal = "0.13.1"

anyhow = "1.0"

minimp3 = { version = "0.5.0", optional = true }
claxon = { version = "0.4.2", optional = true }
hound = { version = "3.3.1", optional = true }
lewton = { version = "0.10", optional = true }

[features]
default = ["mp3", "flac", "wav", "ogg"]
mp3 = ["minimp3"]
flac = ["claxon"]
wav = ["hound"]
ogg = ["lewton"]
