[package]
name = "bevy_oddio_test"
version = "0.1.0"
authors = ["TheRawMeatball <therawmeatball@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { path = "../../bevy", default-features = false, features = ["bevy_wgpu", "bevy_winit", "render", "x11"] }
bevy_oddio = { path = "../bevy_oddio" }
